# UerjML

./: .gitignore  LICENCE.rst  MANIFEST.in  Pipfile  README.md  config.py  pyproject.toml  requirements.txt
AutogluonModels/ag-20230102_115757/: learner.pkl
AutogluonModels/ag-20230102_115757/models/: trainer.pkl
AutogluonModels/ag-20230102_145336/: learner.pkl
AutogluonModels/ag-20230102_145336/models/: trainer.pkl
AutogluonModels/ag-20230102_145714/: learner.pkl
AutogluonModels/ag-20230102_145714/models/: trainer.pkl
AutogluonModels/ag-20230102_151708/: learner.pkl
AutogluonModels/ag-20230102_151708/models/: trainer.pkl
AutogluonModels/ag-20230102_151720/: learner.pkl
AutogluonModels/ag-20230102_151720/models/: trainer.pkl
AutogluonModels/ag-20230109_201020/: learner.pkl  metadata.json
AutogluonModels/ag-20230109_201020/models/: trainer.pkl
AutogluonModels/ag-20230530_163347/: learner.pkl  metadata.json
AutogluonModels/ag-20230530_163347/models/: trainer.pkl
UerjML.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: __init__.py  config.py
app/platform/: routes.py
app/routes/: __init__.py  evaluate.py  index.py  menu.py  preprocess.py  train.py  upload.py
app/source/: functions.py  preprocessing.py  utils.py
app/source/evaluate/: custom_metrics.py
app/source/preprocessing/: function_class.py  preprocessing.py
app/static/css/: dashboard.css  stepbar.css
app/static/js/: uerjml.js
app/templates/: base.html
app/templates/platform/: evaluate.html  index.html  menu.html  open.html  preprocessing.html  table.html  train.html  (+1 more)
(+179 files in other folders)
